--- a/wp-content/themes/wingman/assets/css/woocommerce.css
+++ b/wp-content/themes/wingman/assets/css/woocommerce.css
@@ -1180,12 +1180,12 @@ body .mCSB_container.mCS_no_scrollbar_y.mCS_y_hidden {
     width:50%;
     position: absolute;
     bottom:0;
-    left:0;
+    left: -1px;
 }
 .woocommerce ul.shop-products .tool-inner {
     width: 33.33%;
     height: 40px;
-    padding: 0 1px 0 0;
+    padding: 0 0 0 1px;
     -webkit-transition: all 0.4s ease;
     -moz-transition: all 0.4s ease;
     -ms-transition: all 0.4s ease;
@@ -1198,6 +1198,7 @@ body .mCSB_container.mCS_no_scrollbar_y.mCS_y_hidden {
     -moz-transform: translatey(40px);
     -ms-transform: translatey(40px);
 }
+
 .woocommerce ul.shop-products .added_to_cart,
 .woocommerce ul.shop-products .addtocart_button{
     right:0;
