--- a/wp-content/themes/wingman/assets/css/style.css
+++ b/wp-content/themes/wingman/assets/css/style.css
@@ -1025,34 +1025,40 @@ select:not([multiple]) {
     display: inline-block;
     margin: 0 5px;
     cursor: pointer;
-    font-size: 18px; }
-    .owl-carousel-kt .owl-buttons > div i {
-      -webkit-transition: all 0.2s ease-in-out 0s;
-      -khtml-transition: all 0.2s ease-in-out 0s;
-      -moz-transition: all 0.2s ease-in-out 0s;
-      -ms-transition: all 0.2s ease-in-out 0s;
-      -o-transition: all 0.2s ease-in-out 0s;
-      transition: all 0.2s ease-in-out 0s;
-      -webkit-transform: scale(1);
-      -khtml-transform: scale(1);
-      -moz-transform: scale(1);
-      -ms-transform: scale(1);
-      -o-transform: scale(1);
-      transform: scale(1); }
-    .owl-carousel-kt .owl-buttons > div:hover i {
-      -webkit-transform: scale(1.2);
-      -khtml-transform: scale(1.2);
-      -moz-transform: scale(1.2);
-      -ms-transform: scale(1.2);
-      -o-transform: scale(1.2);
-      transform: scale(1.2); }
+    font-size: 18px;
+    -webkit-transition: all 0.2s ease-in-out 0s;
+    -khtml-transition: all 0.2s ease-in-out 0s;
+    -moz-transition: all 0.2s ease-in-out 0s;
+    -ms-transition: all 0.2s ease-in-out 0s;
+    -o-transition: all 0.2s ease-in-out 0s;
+    transition: all 0.2s ease-in-out 0s; }
+    .owl-carousel-kt .owl-buttons > div:hover {
+      color: #82c14f;
+      border-color: #82c14f; }
+.owl-carousel-kt .owl-pagination {
+  margin-top: 40px; }
+  .owl-carousel-kt .owl-pagination .owl-page {
+    background: #959595;
+    height: 8px;
+    width: 8px;
+    display: inline-block;
+    margin: 0 5px;
+    -webkit-border-radius: 50%;
+    -khtml-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    border-radius: 50%;
+    cursor: pointer; }
+    .owl-carousel-kt .owl-pagination .owl-page.active, .owl-carousel-kt .owl-pagination .owl-page:hover {
+      background: #82c14f; }
 .owl-carousel-kt.carousel-gutters {
   margin-left: -15px;
   margin-right: -15px; }
   .owl-carousel-kt.carousel-gutters .owl-item {
     padding-left: 15px;
     padding-right: 15px; }
-.owl-carousel-ktcarousel-navigation-hasstyle .owl-buttons > div {
+.owl-carousel-kt.carousel-navigation-hasstyle .owl-buttons > div {
   width: 30px;
   height: 30px;
   line-height: 30px;
@@ -1064,7 +1070,7 @@ select:not([multiple]) {
   -ms-transition: all 0.2s ease-in-out 0s;
   -o-transition: all 0.2s ease-in-out 0s;
   transition: all 0.2s ease-in-out 0s; }
-  .owl-carousel-ktcarousel-navigation-hasstyle .owl-buttons > div i {
+  .owl-carousel-kt.carousel-navigation-hasstyle .owl-buttons > div i {
     position: absolute;
     -webkit-transform: translate(-50%, -50%);
     -khtml-transform: translate(-50%, -50%);
@@ -1074,23 +1080,22 @@ select:not([multiple]) {
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%; }
-  .owl-carousel-ktcarousel-navigation-hasstyle .owl-buttons > div:hover {
-    border-color: #82c14f !important;
-    color: #82c14f !important; }
-.owl-carousel-kt.carousel-navigation-border.carousel-navigation-top .owl-buttons > div:first-child:after, .owl-carousel-kt.carousel-navigation-border.carousel-navigation-bottom .owl-buttons > div:first-child:after {
-  content: '';
-  width: 32px;
-  height: 1px;
-  position: absolute;
-  -webkit-transform: translateY(-50%);
-  -khtml-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  transform: translateY(-50%);
-  top: 50%;
-  left: 100%;
-  display: block; }
+  .owl-carousel-kt.carousel-navigation-hasstyle .owl-buttons > div:first-child:after {
+    content: '';
+    width: 32px;
+    height: 1px;
+    position: absolute;
+    -webkit-transform: translateY(-50%);
+    -khtml-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%);
+    top: 50%;
+    left: 100%;
+    display: block; }
+.owl-carousel-kt.carousel-navigation-border .owl-buttons > div {
+  border: 1px solid; }
 .owl-carousel-kt.carousel-navigation-circle_background .owl-buttons > div, .owl-carousel-kt.carousel-navigation-circle_border .owl-buttons > div {
   -webkit-border-radius: 50%;
   -khtml-border-radius: 50%;
@@ -1111,19 +1116,18 @@ select:not([multiple]) {
 .owl-carousel-kt.carousel-navigation-center_outside .owl-buttons, .owl-carousel-kt.carousel-navigation-center .owl-buttons {
   margin: 0; }
   .owl-carousel-kt.carousel-navigation-center_outside .owl-buttons > div, .owl-carousel-kt.carousel-navigation-center .owl-buttons > div {
-    position: absolute;
-    -webkit-transform: translateY(-50%);
-    -khtml-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%);
     top: 50%;
-    margin: 0; }
+    margin: -15px 0 0 0;
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    line-height: 30px; }
     .owl-carousel-kt.carousel-navigation-center_outside .owl-buttons > div.owl-prev, .owl-carousel-kt.carousel-navigation-center .owl-buttons > div.owl-prev {
       left: 0; }
     .owl-carousel-kt.carousel-navigation-center_outside .owl-buttons > div.owl-next, .owl-carousel-kt.carousel-navigation-center .owl-buttons > div.owl-next {
       right: 0; }
+    .owl-carousel-kt.carousel-navigation-center_outside .owl-buttons > div:first-child:after, .owl-carousel-kt.carousel-navigation-center .owl-buttons > div:first-child:after {
+      display: none; }
 .owl-carousel-kt.carousel-navigation-center_outside .owl-buttons > div.owl-prev {
   left: -30px; }
 .owl-carousel-kt.carousel-navigation-center_outside .owl-buttons > div.owl-next {
@@ -1152,6 +1156,47 @@ select:not([multiple]) {
   -ms-opacity: 1;
   -o-opacity: 1;
   opacity: 1; }
+.owl-carousel-kt.carousel-black .owl-buttons > div {
+  color: #000000;
+  border-color: #000000; }
+  .owl-carousel-kt.carousel-black .owl-buttons > div:first-child:after {
+    background: #000000; }
+  .owl-carousel-kt.carousel-black .owl-buttons > div:hover {
+    color: #82c14f;
+    border-color: #82c14f; }
+.owl-carousel-kt.carousel-black.carousel-navigation-background .owl-buttons > div {
+  background: #000000;
+  color: #FFFFFF; }
+  .owl-carousel-kt.carousel-black.carousel-navigation-background .owl-buttons > div:hover {
+    background: #82c14f; }
+.owl-carousel-kt.carousel-white .owl-buttons > div {
+  color: #FFFFFF;
+  border-color: #FFFFFF; }
+  .owl-carousel-kt.carousel-white .owl-buttons > div:first-child:after {
+    background: #FFFFFF; }
+  .owl-carousel-kt.carousel-white .owl-buttons > div:hover {
+    color: #82c14f;
+    border-color: #82c14f; }
+.owl-carousel-kt.carousel-white.carousel-navigation-background .owl-buttons > div {
+  background: #FFFFFF;
+  color: #000000; }
+  .owl-carousel-kt.carousel-white.carousel-navigation-background .owl-buttons > div:hover {
+    background: #82c14f;
+    color: #FFFFFF; }
+.owl-carousel-kt.carousel-accent .owl-buttons > div {
+  color: #82c14f;
+  border-color: #82c14f; }
+  .owl-carousel-kt.carousel-accent .owl-buttons > div:first-child:after {
+    background: #82c14f; }
+  .owl-carousel-kt.carousel-accent .owl-buttons > div:hover {
+    border-color: #000000;
+    color: #000000; }
+.owl-carousel-kt.carousel-accent.carousel-navigation-background .owl-buttons > div {
+  background: #82c14f;
+  color: #FFFFFF; }
+  .owl-carousel-kt.carousel-accent.carousel-navigation-background .owl-buttons > div:hover {
+    background: #000000;
+    color: #FFFFFF; }
 
 /* ==============================
    2. Widgets
