--- a/wp-content/themes/wingman/assets/css/_variables.scss
+++ b/wp-content/themes/wingman/assets/css/_variables.scss
@@ -35,12 +35,14 @@ $border-color: #e5e5e5;
 $border-second-color: #e9e9e9;
 $border-third-color: #e8e8e8;
 $border-dark-color: #363636;
+$border-third-color: #dfdfdf;
 
 $nav-bg: #1e1e1e;
 
 $black: #000000;
 $white: #FFFFFF;
 $gray: #c5c5c5;
+$qty_bg: #f4f6f9;
 
 $icon-list: #959595;
 $social-color: #b2b2b2;
