--- a/wp-content/themes/wingman/assets/css/style.css
+++ b/wp-content/themes/wingman/assets/css/style.css
@@ -187,7 +187,7 @@ input[type=phone],
 input[type=tel],
 input[type=text],
 textarea {
-  border: 2px solid #e5e5e5;
+  border: 1px solid #e5e5e5;
   color: #c5c5c5;
   padding: 6px 12px;
   height: 40px;
@@ -412,6 +412,18 @@ select:not([multiple]) {
       -ms-opacity: 1;
       -o-opacity: 1;
       opacity: 1; }
+
+/* Border more */
+.readmore-link,
+.readmore-link-white {
+  font-size: 12px;
+  font-weight: 600;
+  padding: 0;
+  text-transform: uppercase;
+  letter-spacing: 0.2em; }
+
+.readmore-link-white {
+  color: #FFFFFF; }
 
 /* ==============================
    10. Header
@@ -1488,6 +1500,103 @@ select:not([multiple]) {
       #calendar_wrap table tbody td#today a, #calendar_wrap table thead td#today a {
         color: #fff; }
 
+/**
+ * Search
+ **/
+.searchform {
+  margin: 0 auto;
+  position: relative; }
+  .searchform input[type=text] {
+    background: transparent;
+    width: 100%;
+    padding: 5px 40px 5px 10px; }
+  .searchform button {
+    background: none;
+    color: #636363;
+    border: medium none;
+    height: 30px;
+    padding: 0;
+    position: absolute;
+    right: 5px;
+    top: 50%;
+    width: 30px;
+    -webkit-transform: translate(0, -50%);
+    -khtml-transform: translate(0, -50%);
+    -moz-transform: translate(0, -50%);
+    -ms-transform: translate(0, -50%);
+    -o-transform: translate(0, -50%);
+    transform: translate(0, -50%); }
+  .searchform .postform {
+    display: none; }
+
+#search-fullwidth {
+  margin: 0 auto;
+  max-width: 1140px;
+  text-align: center;
+  position: relative;
+  background: #fff;
+  padding: 75px 15px; }
+  #search-fullwidth button.mfp-close {
+    color: #636363;
+    position: fixed;
+    right: 0;
+    top: 0;
+    filter: alpha(opacity=100);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    -webkit-opacity: 1;
+    -khtml-opacity: 1;
+    -moz-opacity: 1;
+    -ms-opacity: 1;
+    -o-opacity: 1;
+    opacity: 1;
+    font-size: 0; }
+    #search-fullwidth button.mfp-close:after {
+      content: "\f00d";
+      font-family: FontAwesome;
+      font-size: 18px; }
+  #search-fullwidth .searchform {
+    display: block;
+    text-align: center;
+    max-width: 770px;
+    margin: 0 auto; }
+    #search-fullwidth .searchform .postform {
+      background: #82c14f url(../images/arrow-form-cat.png) no-repeat right center;
+      color: #FFFFFF;
+      border: none;
+      display: block;
+      height: 50px;
+      width: 35%;
+      float: left;
+      text-align: center;
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 0.2em; }
+    #search-fullwidth .searchform input[type="text"] {
+      background-color: #FFFFFF;
+      border-radius: 0;
+      font-size: 14px;
+      font-weight: normal;
+      height: auto;
+      padding: 12px 50px 12px 26px;
+      -webkit-transition: all 0.2s ease-in-out 0s;
+      -khtml-transition: all 0.2s ease-in-out 0s;
+      -moz-transition: all 0.2s ease-in-out 0s;
+      -ms-transition: all 0.2s ease-in-out 0s;
+      -o-transition: all 0.2s ease-in-out 0s;
+      transition: all 0.2s ease-in-out 0s;
+      -webkit-appearance: none;
+      -khtml-appearance: none;
+      -moz-appearance: none;
+      -ms-appearance: none;
+      -o-appearance: none;
+      appearance: none;
+      width: 65%;
+      float: left; }
+    #search-fullwidth .searchform button.submit {
+      color: #636363;
+      font-size: 18px;
+      right: 10px; }
+
 /* ==============================
    3. Blog
    ============================== */
@@ -1668,7 +1777,7 @@ article.post-item {
   .post-single .tags-links a {
     display: inline-block;
     padding: 8px 35px;
-    border: 1px solid #e8e8e8;
+    border: 1px solid #dfdfdf;
     text-transform: uppercase;
     color: #898989;
     font-size: 11px;
@@ -1918,6 +2027,74 @@ article.post-item {
     #related-article h2.entry-title a {
       color: #252525; }
 
+/* Blog Posts */
+.blog-posts-loadmore {
+  text-align: center; }
+
+.blog-posts .entry-title {
+  font-size: 24px;
+  line-height: 36px;
+  margin: 0 0 25px; }
+  .blog-posts .entry-title a {
+    color: #252525; }
+    .blog-posts .entry-title a:hover {
+      color: #82c14f; }
+
+/* Blog List */
+.blog-posts-list .list-media-wrapper {
+  position: relative;
+  margin-left: 20px;
+  padding-left: 10px; }
+.blog-posts-list .post-item .meta-date {
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-transform-origin: left top 0;
+  -khtml-transform-origin: left top 0;
+  -moz-transform-origin: left top 0;
+  -ms-transform-origin: left top 0;
+  -o-transform-origin: left top 0;
+  transform-origin: left top 0;
+  -webkit-transform: rotate(90deg);
+  -khtml-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+  transform: rotate(90deg); }
+
+.blog-posts.blog-posts-list .entry-title {
+  margin: 0 0 20px; }
+.blog-posts.blog-posts-list .blog-posts-content .equal_height > div {
+  -webkit-justify-content: center;
+  -khtml-justify-content: center;
+  -moz-justify-content: center;
+  -ms-justify-content: center;
+  -o-justify-content: center;
+  justify-content: center;
+  -webkit-flex-direction: column;
+  -khtml-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
+  -o-flex-direction: column;
+  flex-direction: column;
+  display: -webkit-flex;
+  display: -khtml-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  display: -o-flex;
+  display: flex; }
+
+/* Blog Classic */
+article.post-item.post-layout-classic {
+  margin-bottom: 90px; }
+
+.post-layout-classic .entry-excerpt {
+  margin-bottom: 30px; }
+.post-layout-classic .entry-share-box {
+  float: right;
+  margin-bottom: 15px;
+  margin-top: -15px; }
+
 /* ==============================
    4. Breadcrumb
    ============================== */
@@ -2091,5 +2268,437 @@ article.post-item {
 **/
 .woocommerce-carousel-wrapper .owl-kttheme .product {
   width: 100%; }
+
+/* ==============================
+   10. Composer
+   ============================== */
+/**
+* 5.1. KT Heading
+**/
+.kt-heading-wrapper {
+  margin-bottom: 20px;
+  text-align: left; }
+  .kt-heading-wrapper .kt-heading-title, .kt-heading-wrapper .kt-heading-content {
+    margin: 10px 0; }
+  .kt-heading-wrapper .kt-heading-title:after, .kt-heading-wrapper .kt-heading-title:before {
+    position: absolute;
+    content: "";
+    width: 2px;
+    height: 26px;
+    background: #252525;
+    right: 0;
+    top: 50%;
+    -webkit-transform: translateY(-65%);
+    -khtml-transform: translateY(-65%);
+    -moz-transform: translateY(-65%);
+    -ms-transform: translateY(-65%);
+    -o-transform: translateY(-65%);
+    transform: translateY(-65%); }
+  .kt-heading-wrapper .kt-heading-title:before {
+    left: 0; }
+  .kt-heading-wrapper .kt-heading-title:first-child {
+    margin-top: 0; }
+
+.kt-heading-wrapper.kt-heading-align-center {
+  text-align: center; }
+  .kt-heading-wrapper.kt-heading-align-center .kt-heading-title {
+    padding: 0 50px;
+    display: inline-block;
+    position: relative; }
+
+.kt-heading-wrapper.kt-heading-align-right {
+  text-align: right; }
+
+.kt-heading-wrapper.kt-heading-align-left {
+  text-align: left; }
+
+/**
+* 5.2. Coming soon
+**/
+.wrapper-comingsoon {
+  margin-bottom: 20px;
+  text-align: center; }
+  .wrapper-comingsoon .coming-soon {
+    text-align: center;
+    border: 3px solid #000000;
+    padding: 35px 0;
+    display: inline-block; }
+    .wrapper-comingsoon .coming-soon .wrap {
+      display: inline-block;
+      padding: 10px;
+      min-width: 185px;
+      border-right: 1px solid #dfdfdf; }
+      .wrapper-comingsoon .coming-soon .wrap:last-child {
+        border: none; }
+      .wrapper-comingsoon .coming-soon .wrap .value-time {
+        font-size: 48px;
+        font-weight: normal;
+        line-height: 48px;
+        letter-spacing: 0.1em;
+        margin-bottom: 10px;
+        font-family: "Josefin Slab", serif;
+        font-weight: 700;
+        color: #252525; }
+      .wrapper-comingsoon .coming-soon .wrap .title {
+        font-size: 14px;
+        margin: 0;
+        padding: 0;
+        font-weight: 600;
+        color: #707070;
+        text-transform: uppercase; }
+
+/**
+* 5.2. Social
+**/
+.socials-icon-wrapper {
+  margin: 0 auto 20px; }
+  .socials-icon-wrapper ul {
+    padding: 0;
+    list-style: none;
+    margin: 0; }
+    .socials-icon-wrapper ul li {
+      display: inline-block; }
+      .socials-icon-wrapper ul li:last-child {
+        margin-right: 0 !important; }
+      .socials-icon-wrapper ul li:first-child {
+        margin-left: 0 !important; }
+      .socials-icon-wrapper ul li a {
+        display: inline-block;
+        border: 1px solid transparent;
+        float: left;
+        text-decoration: none;
+        cursor: pointer;
+        text-align: center;
+        position: relative;
+        -webkit-transition: all 0.5s ease 0s;
+        -khtml-transition: all 0.5s ease 0s;
+        -moz-transition: all 0.5s ease 0s;
+        -ms-transition: all 0.5s ease 0s;
+        -o-transition: all 0.5s ease 0s;
+        transition: all 0.5s ease 0s;
+        font-size: 16px;
+        height: 34px;
+        line-height: 32px;
+        width: 34px; }
+        .socials-icon-wrapper ul li a:hover {
+          filter: alpha(opacity=70);
+          -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)";
+          -webkit-opacity: 0.7;
+          -khtml-opacity: 0.7;
+          -moz-opacity: 0.7;
+          -ms-opacity: 0.7;
+          -o-opacity: 0.7;
+          opacity: 0.7; }
+
+.social-background-rounded-outline a,
+.social-background-rounded a {
+  -webkit-border-radius: 100%;
+  -khtml-border-radius: 100%;
+  -moz-border-radius: 100%;
+  -ms-border-radius: 100%;
+  -o-border-radius: 100%;
+  border-radius: 100%; }
+
+.social-background-rounded-less a,
+.social-background-rounded-less-outline a,
+.social-background-diamond-square a {
+  -webkit-border-radius: 3px;
+  -khtml-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -ms-border-radius: 3px;
+  -o-border-radius: 3px;
+  border-radius: 3px; }
+
+.social-background-diamond-square-outline li,
+.social-background-diamond-square li {
+  margin: 0;
+  padding: 6px; }
+
+.social-background-rounded-less-outline li:last-child,
+.social-background-diamond-square li:last-child {
+  margin-right: 0; }
+
+.social-background-diamond-square-outline a,
+.social-background-diamond-square a {
+  -webkit-transform: rotate(-45deg);
+  -khtml-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg); }
+  .social-background-diamond-square-outline a i,
+  .social-background-diamond-square a i {
+    -webkit-transform: rotate(-45deg);
+    -khtml-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg); }
+
+.social-background-empty a {
+  border: none !important;
+  width: auto;
+  height: auto;
+  line-height: 1; }
+
+.social-background-fill.social-style-accent a {
+  background: #82c14f !important;
+  color: #FFFFFF !important; }
+
+.social-background-empty.social-style-accent a,
+.social-background-outline.social-style-accent a {
+  background: none !important;
+  border-color: #82c14f;
+  color: #82c14f !important; }
+
+.social-background-fill.social-style-dark a {
+  background: #252525 !important;
+  color: #FFFFFF !important; }
+
+.social-background-empty.social-style-dark a,
+.social-background-outline.social-style-dark a {
+  background: none !important;
+  border-color: #252525;
+  color: #252525 !important; }
+
+.social-background-fill.social-style-light a {
+  background: #FFFFFF !important;
+  color: #252525 !important; }
+
+.social-background-empty.social-style-light a,
+.social-background-outline.social-style-light a {
+  background: none !important;
+  border-color: #FFFFFF;
+  color: #FFFFFF !important; }
+
+.social-background-fill.social-style-color .twitter {
+  background: #00ACED !important;
+  color: #FFFFFF !important; }
+.social-background-fill.social-style-color .facebook {
+  background: #3B579D !important;
+  color: #FFFFFF !important; }
+.social-background-fill.social-style-color .googleplus {
+  background: #DD4A3A !important;
+  color: #FFFFFF !important; }
+.social-background-fill.social-style-color .linkedin {
+  background: #007BB6 !important;
+  color: #FFFFFF !important; }
+.social-background-fill.social-style-color .pinterest {
+  background: #CB2026 !important;
+  color: #FFFFFF !important; }
+.social-background-fill.social-style-color .dribbble {
+  background: #d0316a !important;
+  color: #FFFFFF !important; }
+.social-background-fill.social-style-color .vimeo {
+  background: #86c9ef !important;
+  color: #FFFFFF !important; }
+.social-background-fill.social-style-color .tumblr {
+  background: #4a6278 !important;
+  color: #FFFFFF !important; }
+.social-background-fill.social-style-color .skype {
+  background: #00aff0 !important;
+  color: #FFFFFF !important; }
+.social-background-fill.social-style-color .youtube {
+  background: #ff021e !important;
+  color: #FFFFFF !important; }
+.social-background-fill.social-style-color .instagram {
+  background: #634d40 !important;
+  color: #FFFFFF !important; }
+
+.social-background-empty.social-style-color .twitter,
+.social-background-outline.social-style-color .twitter {
+  background: none !important;
+  border-color: #00ACED;
+  color: #00ACED !important; }
+.social-background-empty.social-style-color .facebook,
+.social-background-outline.social-style-color .facebook {
+  background: none !important;
+  border-color: #3B579D;
+  color: #3B579D !important; }
+.social-background-empty.social-style-color .googleplus,
+.social-background-outline.social-style-color .googleplus {
+  background: none !important;
+  border-color: #DD4A3A;
+  color: #DD4A3A !important; }
+.social-background-empty.social-style-color .linkedin,
+.social-background-outline.social-style-color .linkedin {
+  background: none !important;
+  border-color: #007BB6;
+  color: #007BB6 !important; }
+.social-background-empty.social-style-color .pinterest,
+.social-background-outline.social-style-color .pinterest {
+  background: none !important;
+  border-color: #CB2026;
+  color: #CB2026 !important; }
+.social-background-empty.social-style-color .dribbble,
+.social-background-outline.social-style-color .dribbble {
+  background: none !important;
+  border-color: #d0316a;
+  color: #d0316a !important; }
+.social-background-empty.social-style-color .vimeo,
+.social-background-outline.social-style-color .vimeo {
+  background: none !important;
+  border-color: #86c9ef;
+  color: #86c9ef !important; }
+.social-background-empty.social-style-color .tumblr,
+.social-background-outline.social-style-color .tumblr {
+  background: none !important;
+  border-color: #4a6278;
+  color: #4a6278 !important; }
+.social-background-empty.social-style-color .skype,
+.social-background-outline.social-style-color .skype {
+  background: none !important;
+  border-color: #00aff0;
+  color: #00aff0 !important; }
+.social-background-empty.social-style-color .youtube,
+.social-background-outline.social-style-color .youtube {
+  background: none !important;
+  border-color: #ff021e;
+  color: #ff021e !important; }
+.social-background-empty.social-style-color .instagram,
+.social-background-outline.social-style-color .instagram {
+  background: none !important;
+  border-color: #634d40;
+  color: #634d40 !important; }
+
+.social-icons-small a {
+  font-size: 14px;
+  height: 26px;
+  line-height: 24px;
+  width: 26px; }
+
+.social-icons-small.social-background-empty a {
+  height: auto;
+  line-height: 1;
+  width: auto; }
+
+.social-icons-small.social-background-diamond-square-outline li,
+.social-icons-small.social-background-diamond-square li {
+  margin: 0;
+  padding: 4px; }
+
+.social-icons-small.social-background-diamond-square-outline li:last-child,
+.social-icons-small.social-background-diamond-square li:last-child {
+  margin-right: 0; }
+
+.social-icons-center {
+  text-align: center; }
+
+.social-icons-left {
+  text-align: left; }
+
+.social-icons-right {
+  text-align: right; }
+  .social-icons-right ul {
+    float: right; }
+
+/*
+ * Contact Form
+ */
+form.wpcf7-form .wpcf7-text, form.wpcf7-form .wpcf7-textarea {
+  padding: 12px 0;
+  border: none;
+  border-bottom: 1px solid #e5e5e5;
+  height: auto;
+  color: #707070; }
+form.wpcf7-form .wpcf7-textarea {
+  width: 100% !important;
+  height: 80px; }
+form.wpcf7-form p {
+  margin-bottom: 10px; }
+  form.wpcf7-form p.wrap-submit {
+    margin-top: 60px;
+    text-align: center; }
+
+/*
+ * Google Map
+ */
+.wrapper-googlemap {
+  position: relative; }
+  .wrapper-googlemap .content-map {
+    position: absolute;
+    padding: 45px 45px 25px;
+    background: #fff;
+    position: absolute;
+    -webkit-transform: translate(-50%, -50%);
+    -khtml-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%; }
+
+/**
+* 11.3. Contact Info
+**/
+.contact-info-wrapper {
+  margin-bottom: 20px; }
+  .contact-info-wrapper > ul {
+    padding: 0; }
+    .contact-info-wrapper > ul li {
+      clear: both;
+      line-height: 24px;
+      margin-bottom: 15px;
+      padding-left: 35px;
+      position: relative;
+      list-style: none !important; }
+      .contact-info-wrapper > ul li i {
+        display: inline-block;
+        height: 25px;
+        left: 3px;
+        position: absolute;
+        width: 20px;
+        font-size: 25px;
+        top: 3px;
+        text-align: center; }
+        .contact-info-wrapper > ul li i.fa-envelope {
+          font-size: 18px; }
+
+.widget_kt_contactinfo .contact-info-wrapper {
+  margin-bottom: 0; }
+
+/* ==============================
+   11. Page Content
+   ============================== */
+/**
+* 11.2. Page 404
+**/
+.content-404 {
+  margin: 0 auto 50px;
+  max-width: 1140px;
+  padding: 95px 15px;
+  text-align: center;
+  border: 1px solid #e5e5e5; }
+  .content-404 h1 {
+    font-size: 0;
+    line-height: normal;
+    margin: 0 0 55px; }
+    .content-404 h1 img {
+      margin: 0 auto; }
+  .content-404 h3 {
+    font-size: 30px;
+    line-height: normal;
+    margin: 0 0 60px;
+    padding: 0; }
+  .content-404 p {
+    font-size: 18px;
+    line-height: 30px;
+    letter-spacing: 0.2em;
+    margin-bottom: 20px; }
+  .content-404 form.searchform {
+    max-width: 550px;
+    margin-bottom: 35px; }
+    .content-404 form.searchform input {
+      border: none;
+      border-bottom: 1px solid #252525;
+      color: #252525; }
+    .content-404 form.searchform button.submit {
+      color: #252525; }
+  .content-404 .buttons {
+    margin-top: 70px; }
+    .content-404 .buttons a {
+      font-weight: 600;
+      letter-spacing: 0.2em; }
 
 /*# sourceMappingURL=style.css.map */
